chore: continue work on change request messages

--- a/backend/data_tools/data/ops_event.json5
+++ b/backend/data_tools/data/ops_event.json5
@@ -3650,5 +3650,341 @@
             created_by: 526,
             created_on: "2025-06-26T14:43:53.928887Z",
         },
+        {
+            // 39 approve change in status
+            event_type: "UPDATE_CHANGE_REQUEST",
+            event_status: "SUCCESS",
+            event_details: {
+                "request.json": {
+                    change_request_id: 1,
+                },
+                change_request: {
+                    id: 1,
+                    status: "APPROVED",
+                    versions: [
+                        {
+                            id: 1,
+                            transaction_id: 1446,
+                        },
+                        {
+                            id: 1,
+                            transaction_id: 1470,
+                        },
+                    ],
+                    agreement: 9,
+                    created_by: 520,
+                    created_on: "2025-07-15T17:56:00.194207Z",
+                    updated_by: 525,
+                    updated_on: "2025-07-15T18:09:21.782908Z",
+                    reviewed_on: "2025-07-15T18:09:21.790963Z",
+                    agreement_id: 9,
+                    display_name: "BudgetLineItemChangeRequest#1",
+                    reviewed_by_id: 525,
+                    reviewer_notes: "Sounds good to me, Derrek. ",
+                    created_by_user: {
+                        id: 520,
+                        full_name: "System Owner",
+                    },
+                    requestor_notes: "",
+                    updated_by_user: {
+                        id: 525,
+                        full_name: "Director Derrek",
+                    },
+                    budget_line_item: 15007,
+                    managing_division: 9,
+                    budget_line_item_id: 15007,
+                    change_request_type: "BUDGET_LINE_ITEM_CHANGE_REQUEST",
+                    managing_division_id: 9,
+                    requested_change_data: {
+                        status: "IN_EXECUTION",
+                    },
+                    requested_change_diff: {
+                        status: {
+                            new: "IN_EXECUTION",
+                            old: "PLANNED",
+                        },
+                    },
+                    requested_change_info: {
+                        target_display_name: "BL 15007",
+                    },
+                },
+                "request.values": {},
+                "request.headers": {
+                    Host: "localhost:8080",
+                    Accept: "*/*",
+                    Origin: "http://localhost:3000",
+                    Referer: "http://localhost:3000/",
+                    "Sec-Ch-Ua": "Who cares",
+                    Connection: "keep-alive",
+                    "User-Agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/138.0.0.0 Safari/537.36",
+                    "Content-Type": "application/json",
+                    Authorization: "Bearer Token",
+                    "Content-Length": "89",
+                    "Sec-Fetch-Dest": "empty",
+                    "Sec-Fetch-Mode": "cors",
+                    "Sec-Fetch-Site": "same-site",
+                    "Accept-Encoding": "gzip, deflate, br, zstd",
+                    "Accept-Language": "en-US,en;q=0.9",
+                    "Sec-Ch-Ua-Mobile": "?0",
+                    "Sec-Ch-Ua-Platform": '"macOS"',
+                },
+                "request.remote_addr": "192.168.127.1",
+                "request.remote_user": null,
+            },
+            created_by: 526,
+            created_on: "2025-06-26T14:43:53.928887Z",
+        },
+        {
+            // 40 deny CAN change requests
+            event_type: "UPDATE_CHANGE_REQUEST",
+            event_status: "SUCCESS",
+            event_details: {
+                "request.json": {
+                    change_request_id: 1,
+                },
+                change_request: {
+                    id: 1,
+                    status: "REJECTED",
+                    versions: [
+                        {
+                            id: 1,
+                            transaction_id: 1442,
+                        },
+                        {
+                            id: 1,
+                            transaction_id: 1457,
+                        },
+                    ],
+                    agreement: 9,
+                    created_by: 520,
+                    created_on: "2025-07-16T14:10:45.260701Z",
+                    updated_by: 522,
+                    updated_on: "2025-07-16T14:13:28.246525Z",
+                    reviewed_on: "2025-07-16T14:13:28.251275Z",
+                    agreement_id: 9,
+                    display_name: "BudgetLineItemChangeRequest#1",
+                    reviewed_by_id: 522,
+                    reviewer_notes: "no",
+                    created_by_user: {
+                        id: 520,
+                        full_name: "System Owner",
+                    },
+                    requestor_notes: null,
+                    updated_by_user: {
+                        id: 522,
+                        full_name: "Dave Director",
+                    },
+                    budget_line_item: 15008,
+                    managing_division: 4,
+                    budget_line_item_id: 15008,
+                    change_request_type: "BUDGET_LINE_ITEM_CHANGE_REQUEST",
+                    managing_division_id: 4,
+                    requested_change_data: {
+                        can_id: 516,
+                    },
+                    requested_change_diff: {
+                        can_id: {
+                            new: 516,
+                            old: 512,
+                        },
+                    },
+                    requested_change_info: {
+                        target_display_name: "BL 15008",
+                    },
+                },
+                "request.values": {},
+                "request.headers": {
+                    Host: "localhost:8080",
+                    Accept: "*/*",
+                    Origin: "http://localhost:3000",
+                    Referer: "http://localhost:3000/",
+                    "Sec-Ch-Ua": "dont care",
+                    Connection: "keep-alive",
+                    "User-Agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/138.0.0.0 Safari/537.36",
+                    "Content-Type": "application/json",
+                    Authorization: "Bearer Token",
+                    "Content-Length": "63",
+                    "Sec-Fetch-Dest": "empty",
+                    "Sec-Fetch-Mode": "cors",
+                    "Sec-Fetch-Site": "same-site",
+                    "Accept-Encoding": "gzip, deflate, br, zstd",
+                    "Accept-Language": "en-US,en;q=0.9",
+                    "Sec-Ch-Ua-Mobile": "?0",
+                    "Sec-Ch-Ua-Platform": '"macOS"',
+                },
+                "request.remote_addr": "192.168.127.1",
+                "request.remote_user": null,
+            },
+            created_by: 526,
+            created_on: "2025-06-26T14:43:53.928887Z",
+        },
+        {
+            // 41 approve amount change requests
+            event_type: "UPDATE_CHANGE_REQUEST",
+            event_status: "SUCCESS",
+            event_details: {
+                "request.json": {
+                    change_request_id: 2,
+                },
+                change_request: {
+                    id: 2,
+                    status: "APPROVED",
+                    versions: [
+                        {
+                            id: 2,
+                            transaction_id: 1482,
+                        },
+                        {
+                            id: 2,
+                            transaction_id: 1505,
+                        },
+                    ],
+                    agreement: 9,
+                    created_by: 520,
+                    created_on: "2025-07-16T14:33:13.029002Z",
+                    updated_by: 525,
+                    updated_on: "2025-07-16T14:38:36.318627Z",
+                    reviewed_on: "2025-07-16T14:38:36.338355Z",
+                    agreement_id: 9,
+                    display_name: "BudgetLineItemChangeRequest#2",
+                    reviewed_by_id: 525,
+                    reviewer_notes: "Yes!",
+                    created_by_user: {
+                        id: 520,
+                        full_name: "System Owner",
+                    },
+                    requestor_notes: null,
+                    updated_by_user: {
+                        id: 525,
+                        full_name: "Director Derrek",
+                    },
+                    budget_line_item: 15007,
+                    managing_division: 9,
+                    budget_line_item_id: 15007,
+                    change_request_type: "BUDGET_LINE_ITEM_CHANGE_REQUEST",
+                    managing_division_id: 9,
+                    requested_change_data: {
+                        amount: 800000.0,
+                    },
+                    requested_change_diff: {
+                        amount: {
+                            new: 800000.0,
+                            old: 700000.0,
+                        },
+                    },
+                    requested_change_info: {
+                        target_display_name: "BL 15007",
+                    },
+                },
+                "request.values": {},
+                "request.headers": {
+                    Host: "localhost:8080",
+                    Accept: "*/*",
+                    Origin: "http://localhost:3000",
+                    Referer: "http://localhost:3000/",
+                    "Sec-Ch-Ua": "Not matter",
+                    Connection: "keep-alive",
+                    "User-Agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/138.0.0.0 Safari/537.36",
+                    "Content-Type": "application/json",
+                    Authorization: "Bearer Token",
+                    "Content-Length": "66",
+                    "Sec-Fetch-Dest": "empty",
+                    "Sec-Fetch-Mode": "cors",
+                    "Sec-Fetch-Site": "same-site",
+                    "Accept-Encoding": "gzip, deflate, br, zstd",
+                    "Accept-Language": "en-US,en;q=0.9",
+                    "Sec-Ch-Ua-Mobile": "?0",
+                    "Sec-Ch-Ua-Platform": '"macOS"',
+                },
+                "request.remote_addr": "192.168.127.1",
+                "request.remote_user": null,
+            },
+            created_by: 526,
+            created_on: "2025-06-26T14:43:53.928887Z",
+        },
+        {
+            // 42 approve need by date change request
+            event_type: "UPDATE_CHANGE_REQUEST",
+            event_status: "SUCCESS",
+            event_details: {
+                "request.json": {
+                    change_request_id: 3,
+                },
+                change_request: {
+                    id: 3,
+                    status: "APPROVED",
+                    versions: [
+                        {
+                            id: 3,
+                            transaction_id: 1485,
+                        },
+                        {
+                            id: 3,
+                            transaction_id: 1506,
+                        },
+                    ],
+                    agreement: 9,
+                    created_by: 520,
+                    created_on: "2025-07-16T14:33:13.043208Z",
+                    updated_by: 525,
+                    updated_on: "2025-07-16T14:38:36.329873Z",
+                    reviewed_on: "2025-07-16T14:38:36.339612Z",
+                    agreement_id: 9,
+                    display_name: "BudgetLineItemChangeRequest#3",
+                    reviewed_by_id: 525,
+                    reviewer_notes: "Yes!",
+                    created_by_user: {
+                        id: 520,
+                        full_name: "System Owner",
+                    },
+                    requestor_notes: null,
+                    updated_by_user: {
+                        id: 525,
+                        full_name: "Director Derrek",
+                    },
+                    budget_line_item: 15007,
+                    managing_division: 9,
+                    budget_line_item_id: 15007,
+                    change_request_type: "BUDGET_LINE_ITEM_CHANGE_REQUEST",
+                    managing_division_id: 9,
+                    requested_change_data: {
+                        date_needed: "2043-07-13",
+                    },
+                    requested_change_diff: {
+                        date_needed: {
+                            new: "2043-07-13",
+                            old: "2043-06-13",
+                        },
+                    },
+                    requested_change_info: {
+                        target_display_name: "BL 15007",
+                    },
+                },
+                "request.values": {},
+                "request.headers": {
+                    Host: "localhost:8080",
+                    Accept: "*/*",
+                    Origin: "http://localhost:3000",
+                    Referer: "http://localhost:3000/",
+                    "Sec-Ch-Ua": "Dont Matter",
+                    Connection: "keep-alive",
+                    "User-Agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/138.0.0.0 Safari/537.36",
+                    "Content-Type": "application/json",
+                    Authorization: "Bearer Token",
+                    "Content-Length": "66",
+                    "Sec-Fetch-Dest": "empty",
+                    "Sec-Fetch-Mode": "cors",
+                    "Sec-Fetch-Site": "same-site",
+                    "Accept-Encoding": "gzip, deflate, br, zstd",
+                    "Accept-Language": "en-US,en;q=0.9",
+                    "Sec-Ch-Ua-Mobile": "?0",
+                    "Sec-Ch-Ua-Platform": '"macOS"',
+                },
+                "request.remote_addr": "192.168.127.1",
+                "request.remote_user": null,
+            },
+            created_by: 526,
+            created_on: "2025-06-26T14:43:53.928887Z",
+        },
     ],
 }
