--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,6 @@
   "python.testing.pytestEnabled": true,
   "python.analysis.autoImportCompletions": true,
   "python.terminal.activateEnvironment": false,
-  "python.defaultInterpreterPath": "${workspaceFolder}/backend/ops_api/.venv/bin/python",
   "git.enableCommitSigning": true,
   "editor.defaultFormatter": "ms-python.black-formatter",
   "editor.formatOnSave": true,
@@ -33,6 +32,7 @@
   "[javascript]": {
     "editor.defaultFormatter": null
   },
-  "python.envFile": "${workspaceFolder}/.env",
-  "python.testing.pytestPath": "${workspaceFolder}/backend/ops_api/.venv/bin/pytest"
+  "python.analysis.extraPaths": [
+    "backend"
+  ]
 }
