chore: set default formatter for JavaScript to Prettier

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,7 +30,7 @@
     }
   ],
   "[javascript]": {
-    "editor.defaultFormatter": null
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "python.analysis.extraPaths": [
     "backend"
