--- a/backend/data_tools/data/agreements_and_blin_data.json5
+++ b/backend/data_tools/data/agreements_and_blin_data.json5
@@ -405,6 +405,38 @@
         },
         {
             budget_line_item_type: "CONTRACT",
+            line_description: "LI 2",
+            comments: "",
+            can_id: 504,
+            created_by: 503,
+            agreement_id: 10,
+            amount: 1000000.0,
+            status: "IN_EXECUTION",
+            date_needed: "2043-06-13T14:03:25.765487",
+            proc_shop_fee_percentage: 0,
+            services_component_id: 7,
+            on_hold: false,
+            certified: false,
+            closed: false,
+        },
+        {
+            budget_line_item_type: "CONTRACT",
+            line_description: "LI 2",
+            comments: "",
+            can_id: 504,
+            created_by: 503,
+            agreement_id: 10,
+            amount: 1000000.0,
+            status: "OBLIGATED",
+            date_needed: "2043-06-13T14:03:25.765487",
+            proc_shop_fee_percentage: 0,
+            services_component_id: 7,
+            on_hold: false,
+            certified: false,
+            closed: false,
+        },
+        {
+            budget_line_item_type: "CONTRACT",
             line_description: "Support #1",
             comments: "",
             can_id: 516,
