--- a/backend/data_tools/data/ops_event.json5
+++ b/backend/data_tools/data/ops_event.json5
@@ -4491,5 +4491,379 @@
             created_by: 516,
             created_on: "2025-01-29T14:43:53.928887Z",
         },
+        {
+            // 48 add BLI
+            event_type: "CREATE_BLI",
+            event_status: "SUCCESS",
+            event_details: {
+                new_bli: {
+                    id: 16041,
+                    can: 517,
+                    mod: null,
+                    clin: null,
+                    amount: "120000.00",
+                    can_id: 517,
+                    closed: false,
+                    is_obe: false,
+                    mod_id: null,
+                    status: "DRAFT",
+                    clin_id: null,
+                    invoice: null,
+                    on_hold: false,
+                    comments: null,
+                    end_date: null,
+                    versions: [
+                        {
+                            id: 16041,
+                            transaction_id: 1456,
+                        },
+                    ],
+                    agreement: 9,
+                    certified: false,
+                    closed_by: null,
+                    created_by: 520,
+                    created_on: "2025-07-29T14:34:03.969212Z",
+                    start_date: null,
+                    updated_by: 520,
+                    updated_on: "2025-07-29T14:34:03.969212Z",
+                    closed_date: null,
+                    date_needed: "2027-07-29",
+                    requisition: null,
+                    agreement_id: 9,
+                    display_name: "BL 16041",
+                    doc_received: false,
+                    extend_pop_to: null,
+                    closed_by_user: null,
+                    created_by_user: {
+                        id: 520,
+                        full_name: "System Owner",
+                    },
+                    obligation_date: null,
+                    updated_by_user: {
+                        id: 520,
+                        full_name: "System Owner",
+                    },
+                    line_description: "",
+                    object_class_code: null,
+                    psc_fee_doc_number: null,
+                    services_component: 6,
+                    object_class_code_id: null,
+                    procurement_shop_fee: null,
+                    psc_fee_pymt_ref_nbr: null,
+                    budget_line_item_type: "CONTRACT",
+                    services_component_id: 6,
+                    procurement_shop_fee_id: null,
+                    proc_shop_fee_percentage: null,
+                    is_under_current_resolution: false,
+                    service_component_name_for_sort: "SC1",
+                },
+                "request.json": {
+                    amount: 120000,
+                    can_id: 517,
+                    status: "DRAFT",
+                    date_needed: "2027-07-29",
+                    agreement_id: 9,
+                    line_description: "",
+                    services_component_id: 6,
+                    proc_shop_fee_percentage: null,
+                },
+                "request.values": {},
+                "request.headers": {
+                    Host: "localhost:8080",
+                    Accept: "*/*",
+                    Origin: "http://localhost:3000",
+                    Referer: "http://localhost:3000/",
+                    "Sec-Ch-Ua": "dont matter",
+                    Connection: "keep-alive",
+                    "User-Agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/138.0.0.0 Safari/537.36",
+                    "Content-Type": "application/json",
+                    Authorization: "Bearer Token",
+                    "Content-Length": "171",
+                    "Sec-Fetch-Dest": "empty",
+                    "Sec-Fetch-Mode": "cors",
+                    "Sec-Fetch-Site": "same-site",
+                    "Accept-Encoding": "gzip, deflate, br, zstd",
+                    "Accept-Language": "en-US,en;q=0.9",
+                    "Sec-Ch-Ua-Mobile": "?0",
+                    "Sec-Ch-Ua-Platform": '"macOS"',
+                },
+                "request.remote_addr": "192.168.127.1",
+                "request.remote_user": null,
+            },
+            created_by: 516,
+            created_on: "2025-01-29T14:43:53.928887Z",
+        },
+        {
+            // 49 add Agreement
+            event_type: "CREATE_NEW_AGREEMENT",
+            event_status: "SUCCESS",
+            event_details: {
+                "request.json": {
+                    name: "Test Agreement For History",
+                    notes: "",
+                    vendor: null,
+                    project_id: 1010,
+                    description: "Hello",
+                    team_members: [
+                        {
+                            id: 501,
+                            full_name: "Amy Madigan",
+                        },
+                    ],
+                    contract_type: "FIRM_FIXED_PRICE",
+                    agreement_type: "CONTRACT",
+                    agreement_reason: "NEW_REQ",
+                    awarding_entity_id: 3,
+                    project_officer_id: 287,
+                    product_service_code_id: 1,
+                    service_requirement_type: "NON_SEVERABLE",
+                    alternate_project_officer_id: 503,
+                },
+                "New Agreement": {
+                    id: 11,
+                    name: "Test Agreement For History",
+                    notes: "",
+                    vendor: null,
+                    cotr_id: null,
+                    project: 1010,
+                    end_date: null,
+                    versions: [
+                        {
+                            id: 12,
+                            transaction_id: 1476,
+                        },
+                    ],
+                    nick_name: null,
+                    po_number: null,
+                    vendor_id: null,
+                    created_by: 520,
+                    created_on: "2025-07-29T17:36:32.327888Z",
+                    project_id: 1010,
+                    start_date: null,
+                    updated_by: 520,
+                    updated_on: "2025-07-29T17:36:32.327888Z",
+                    description: "Hello",
+                    maps_sys_id: null,
+                    display_name: "Test Agreement For History",
+                    team_members: [501],
+                    contract_type: "FIRM_FIXED_PRICE",
+                    agreement_type: "CONTRACT",
+                    contract_number: null,
+                    created_by_user: {
+                        id: 520,
+                        full_name: "System Owner",
+                    },
+                    project_officer: 287,
+                    updated_by_user: {
+                        id: 520,
+                        full_name: "System Owner",
+                    },
+                    acquisition_type: null,
+                    agreement_reason: "NEW_REQ",
+                    delivered_status: false,
+                    procurement_shop: 3,
+                    support_contacts: [],
+                    budget_line_items: [],
+                    contract_category: null,
+                    task_order_number: null,
+                    awarding_entity_id: 3,
+                    project_officer_id: 287,
+                    product_service_code: 1,
+                    product_service_code_id: 1,
+                    psc_contract_specialist: null,
+                    service_requirement_type: "NON_SEVERABLE",
+                    alternate_project_officer: 503,
+                    alternate_project_officer_id: 503,
+                },
+                "request.values": {},
+                "request.headers": {
+                    Host: "localhost:8080",
+                    Accept: "*/*",
+                    Origin: "http://localhost:3000",
+                    Referer: "http://localhost:3000/",
+                    "Sec-Ch-Ua": "Hello",
+                    Connection: "keep-alive",
+                    "User-Agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/138.0.0.0 Safari/537.36",
+                    "Content-Type": "application/json",
+                    Authorization: "Bearer Token",
+                    "Content-Length": "402",
+                    "Sec-Fetch-Dest": "empty",
+                    "Sec-Fetch-Mode": "cors",
+                    "Sec-Fetch-Site": "same-site",
+                    "Accept-Encoding": "gzip, deflate, br, zstd",
+                    "Accept-Language": "en-US,en;q=0.9",
+                    "Sec-Ch-Ua-Mobile": "?0",
+                    "Sec-Ch-Ua-Platform": '"macOS"',
+                },
+                "request.remote_addr": "192.168.127.1",
+                "request.remote_user": null,
+            },
+            created_by: 516,
+            created_on: "2025-01-29T14:43:53.928887Z",
+        },
+        {
+            // 50 add Services Component
+            event_type: "CREATE_SERVICES_COMPONENT",
+            event_status: "SUCCESS",
+            event_details: {
+                new_sc: {
+                    id: 9,
+                    number: 3,
+                    optional: true,
+                    created_by: 520,
+                    created_on: "2025-07-29T17:37:18.065222Z",
+                    period_end: "2025-09-27",
+                    updated_on: "2025-07-29T17:37:18.065222Z",
+                    description: "",
+                    display_name: "OSC3",
+                    period_start: "2025-09-23",
+                    display_title: "Optional Services Component 3",
+                    contract_agreement_id: 9,
+                },
+                "request.json": {
+                    number: 3,
+                    optional: true,
+                    period_end: "2025-09-27",
+                    description: "",
+                    period_start: "2025-09-23",
+                    contract_agreement_id: 9,
+                },
+                "request.values": {},
+                "request.headers": {
+                    Host: "localhost:8080",
+                    Accept: "*/*",
+                    Origin: "http://localhost:3000",
+                    Referer: "http://localhost:3000/",
+                    "Sec-Ch-Ua": "test",
+                    Connection: "keep-alive",
+                    "User-Agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/138.0.0.0 Safari/537.36",
+                    "Content-Type": "application/json",
+                    Authorization: "Bearer Token",
+                    "Content-Length": "126",
+                    "Sec-Fetch-Dest": "empty",
+                    "Sec-Fetch-Mode": "cors",
+                    "Sec-Fetch-Site": "same-site",
+                    "Accept-Encoding": "gzip, deflate, br, zstd",
+                    "Accept-Language": "en-US,en;q=0.9",
+                    "Sec-Ch-Ua-Mobile": "?0",
+                    "Sec-Ch-Ua-Platform": '"macOS"',
+                },
+                "request.remote_addr": "192.168.127.1",
+                "request.remote_user": null,
+            },
+            created_by: 526,
+            created_on: "2025-01-29T14:43:53.928887Z",
+        },
+        {
+            // 51 delete Services Component
+            event_type: "DELETE_SERVICES_COMPONENT",
+            event_status: "SUCCESS",
+            event_details: {
+                "request.values": {},
+                "request.headers": {
+                    Host: "localhost:8080",
+                    Accept: "*/*",
+                    Origin: "http://localhost:3000",
+                    Referer: "http://localhost:3000/",
+                    "Sec-Ch-Ua": "hello",
+                    Connection: "keep-alive",
+                    "User-Agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/138.0.0.0 Safari/537.36",
+                    Authorization: "Bearer Token",
+                    "Sec-Fetch-Dest": "empty",
+                    "Sec-Fetch-Mode": "cors",
+                    "Sec-Fetch-Site": "same-site",
+                    "Accept-Encoding": "gzip, deflate, br, zstd",
+                    "Accept-Language": "en-US,en;q=0.9",
+                    "Sec-Ch-Ua-Mobile": "?0",
+                    "Sec-Ch-Ua-Platform": '"macOS"',
+                },
+                service_component: {
+                    id: 9,
+                    number: 4,
+                    optional: true,
+                    versions: [],
+                    created_by: 520,
+                    created_on: "2025-07-29T21:01:43.757603Z",
+                    period_end: "2027-07-31",
+                    updated_by: 520,
+                    updated_on: "2025-07-29T21:11:23.494271Z",
+                    description: "test",
+                    display_name: "OSC4",
+                    period_start: "2025-07-30",
+                    sub_component: null,
+                    created_by_user: null,
+                    updated_by_user: null,
+                    budget_line_items: [],
+                    contract_agreement: 9,
+                    contract_agreement_id: 9,
+                    display_name_for_sort: "OSC4",
+                },
+                "request.remote_addr": "192.168.127.1",
+                "request.remote_user": null,
+            },
+            created_by: 526,
+            created_on: "2025-01-29T14:43:53.928887Z",
+        },
+        {
+            // 52 edit Services Component
+            event_type: "UPDATE_SERVICES_COMPONENT",
+            event_status: "SUCCESS",
+            event_details: {
+                "request.json": {
+                    number: 22,
+                    period_end: "2054-07-15",
+                    description: "Test SC description Update",
+                    period_start: null,
+                },
+                "request.values": {},
+                "request.headers": {
+                    Host: "localhost",
+                    "User-Agent": "Werkzeug/3.1.3",
+                    "Content-Type": "application/json",
+                    Authorization: "Bearer Token",
+                    "Content-Length": "109",
+                },
+                "request.remote_addr": "127.0.0.1",
+                "request.remote_user": null,
+                services_component_updates: {
+                    changes: {
+                        number: {
+                            new_value: 22,
+                            old_value: 99,
+                        },
+                        period_end: {
+                            new_value: "2054-07-15",
+                            old_value: "2024-06-30",
+                        },
+                        updated_on: {
+                            new_value: "2025-07-30T14:19:46.928548Z",
+                            old_value: "2025-07-30T14:19:46.741331Z",
+                        },
+                        description: {
+                            new_value: "Test SC description Update",
+                            old_value: "Test SC description",
+                        },
+                        optional: {
+                            new_value: false,
+                            old_value: true,
+                        },
+                        display_name: {
+                            new_value: "SC22",
+                            old_value: "SC99",
+                        },
+                        display_name_for_sort: {
+                            new_value: "SC22",
+                            old_value: "SC99",
+                        },
+                    },
+                    sc_display_name: "SC22",
+                    sc_display_number: 22,
+                    owner_id: 9,
+                    updated_by: 526,
+                },
+            },
+            created_by: 526,
+            created_on: "2025-01-29T14:43:53.928887Z",
+        },
     ],
 }
