--- a/backend/data_tools/data/agreements_and_blin_data.json5
+++ b/backend/data_tools/data/agreements_and_blin_data.json5
@@ -249,19 +249,19 @@
             id: 1,
             name: "CLIN 1",
             number: 1,
-            contract_agreement_id: 1,
+            agreement_id: 1,
         },
         {
             id: 2,
             name: "CLIN 2",
             number: 2,
-            contract_agreement_id: 1,
+            agreement_id: 1,
         },
         {
             id: 3,
             name: "CLIN 3",
             number: 3,
-            contract_agreement_id: 1,
+            agreement_id: 1,
         },
     ],
     services_component: [
