--- a/backend/data_tools/data/user_data.json5
+++ b/backend/data_tools/data/user_data.json5
@@ -322,7 +322,70 @@
         "POST_UPLOAD_DOCUMENT",
         "PATCH_UPLOAD_DOCUMENT"
       ],
-    }
+    },
+    { // 7 Super User
+      name: "SUPER_USER",
+      permissions: [
+        "GET_AGREEMENT",
+        "PUT_AGREEMENT",
+        "PATCH_AGREEMENT",
+        "POST_AGREEMENT",
+        "DELETE_AGREEMENT",
+
+        "GET_BUDGET_LINE_ITEM",
+        "PUT_BUDGET_LINE_ITEM",
+        "PATCH_BUDGET_LINE_ITEM",
+        "POST_BUDGET_LINE_ITEM",
+        "DELETE_BUDGET_LINE_ITEM",
+
+        "GET_SERVICES_COMPONENT",
+        "PUT_SERVICES_COMPONENT",
+        "PATCH_SERVICES_COMPONENT",
+        "POST_SERVICES_COMPONENT",
+        "DELETE_SERVICES_COMPONENT",
+
+        "GET_BLI_PACKAGE",
+        "PUT_BLI_PACKAGE",
+        "PATCH_BLI_PACKAGE",
+        "POST_BLI_PACKAGE",
+
+        "GET_CAN",
+        "PUT_CAN",
+        "PATCH_CAN",
+        "POST_CAN",
+        "DELETE_CAN",
+
+        "GET_DIVISION",
+
+        "GET_NOTIFICATION",
+        "PUT_NOTIFICATION",
+        "PATCH_NOTIFICATION",
+
+        "GET_PORTFOLIO",
+        "PUT_PORTFOLIO",
+        "PATCH_PORTFOLIO",
+        "POST_PORTFOLIO",
+
+        "GET_RESEARCH_PROJECT",
+        "POST_RESEARCH_PROJECT",
+        "PUT_RESEARCH_PROJECT",
+        "POST_RESEARCH_PROJECT",
+
+        "GET_USER",
+        "PUT_USER",
+        "PATCH_USER",
+
+        "GET_HISTORY",
+
+        "GET_CHANGE_REQUEST",
+        "PUT_CHANGE_REQUEST",
+        "PATCH_CHANGE_REQUEST",
+        "POST_CHANGE_REQUEST",
+
+        "GET_UPLOAD_DOCUMENT",
+        "POST_UPLOAD_DOCUMENT"
+      ]
+    },
   ],
   ops_user: [
     { // 500
@@ -585,6 +648,15 @@
       email: "procurement.team@email.com",
       oidc_id: "00000000-0000-1111-a111-000000000027",
       roles: [{"tablename":  "role", "id": 6}],
+      status: "ACTIVE"
+    },
+    { // 528
+      first_name: "Power",
+      last_name: "User",
+      division: 1,
+      email: "power.user@email.com",
+      oidc_id: "00000000-0000-1111-a111-000000000028",
+      roles: [{"tablename":  "role", "id": 7}],
       status: "ACTIVE"
     }
   ],
