chore: adding test data and agreement history. still need to test

--- a/backend/data_tools/data/ops_event.json5
+++ b/backend/data_tools/data/ops_event.json5
@@ -5927,5 +5927,262 @@
             created_by: 516,
             created_on: "2025-01-29T14:43:53.928887Z",
         },
+        {
+            // 63 update draft BLI
+            event_type: "UPDATE_BLI",
+            event_status: "SUCCESS",
+            event_details: {
+                bli: {
+                    id: 16043,
+                    can: 503,
+                    mod: null,
+                    clin: null,
+                    amount: "23435.00",
+                    can_id: 503,
+                    closed: false,
+                    is_obe: false,
+                    mod_id: null,
+                    status: "DRAFT",
+                    clin_id: null,
+                    invoice: null,
+                    on_hold: false,
+                    comments: null,
+                    end_date: null,
+                    versions: [
+                        {
+                            id: 16043,
+                            transaction_id: 1488,
+                        },
+                        {
+                            id: 16043,
+                            transaction_id: 1494,
+                        },
+                    ],
+                    agreement: 9,
+                    certified: false,
+                    closed_by: null,
+                    created_by: 520,
+                    created_on: "2025-09-23T14:44:50.220295Z",
+                    start_date: null,
+                    updated_by: 520,
+                    updated_on: "2025-09-23T14:45:47.723802Z",
+                    closed_date: null,
+                    date_needed: "2025-09-26",
+                    requisition: null,
+                    agreement_id: 9,
+                    display_name: "BL 16044",
+                    doc_received: false,
+                    extend_pop_to: null,
+                    closed_by_user: null,
+                    created_by_user: {
+                        id: 520,
+                        full_name: "System Owner",
+                    },
+                    obligation_date: null,
+                    updated_by_user: {
+                        id: 520,
+                        full_name: "System Owner",
+                    },
+                    line_description: "jhkg",
+                    object_class_code: null,
+                    psc_fee_doc_number: null,
+                    services_component: 9,
+                    object_class_code_id: null,
+                    procurement_shop_fee: null,
+                    psc_fee_pymt_ref_nbr: null,
+                    budget_line_item_type: "CONTRACT",
+                    services_component_id: 9,
+                    procurement_shop_fee_id: null,
+                    proc_shop_fee_percentage: null,
+                    is_under_current_resolution: false,
+                    service_component_name_for_sort: "SC2",
+                },
+                bli_updates: {
+                    changes: {
+                        can: {
+                            new_value: 503,
+                            old_value: 517,
+                        },
+                        amount: {
+                            new_value: "23435.00",
+                            old_value: "12345.00",
+                        },
+                        can_id: {
+                            new_value: 503,
+                            old_value: 517,
+                        },
+                        updated_on: {
+                            new_value: "2025-09-23T14:45:47.723802Z",
+                            old_value: "2025-09-23T14:44:50.220295Z",
+                        },
+                        date_needed: {
+                            new_value: "2025-09-26",
+                            old_value: "2025-09-24",
+                        },
+                        line_description: {
+                            new_value: "jhkg",
+                            old_value: "",
+                        },
+                        services_component: {
+                            new_value: 9,
+                            old_value: 6,
+                        },
+                        services_component_id: {
+                            new_value: 9,
+                            old_value: 6,
+                        },
+                        service_component_name_for_sort: {
+                            new_value: "SC2",
+                            old_value: "SC1",
+                        },
+                    },
+                    owner_id: 9,
+                    updated_by: 520,
+                },
+                "request.json": {
+                    amount: 23435,
+                    can_id: 503,
+                    is_obe: false,
+                    status: "DRAFT",
+                    comments: null,
+                    updated_by: 520,
+                    date_needed: "2025-09-26",
+                    fiscal_year: 2025,
+                    agreement_id: 9,
+                    portfolio_id: 9,
+                    team_members: [
+                        {
+                            id: 511,
+                            email: "Niki.Denmark@example.com",
+                            full_name: "Niki Denmark",
+                        },
+                        {
+                            id: 520,
+                            email: "system.owner@email.com",
+                            full_name: "System Owner",
+                        },
+                    ],
+                    line_description: "jhkg",
+                    financialSnapshot: {
+                        needByDate: "2025-09-26",
+                        enteredAmount: 23435,
+                        originalCanID: 517,
+                        selectedCanId: 503,
+                        originalAmount: 12345,
+                        originalDateNeeded: "2025-09-24",
+                    },
+                    procurement_shop_fee: null,
+                    budget_line_item_type: "CONTRACT",
+                    services_component_id: 9,
+                    portfolio_team_leaders: [],
+                    procurement_shop_fee_id: null,
+                    proc_shop_fee_percentage: null,
+                    change_requests_in_review: null,
+                },
+                "request.values": {},
+                "request.headers": {
+                    Host: "localhost:8080",
+                    Accept: "*/*",
+                    Origin: "http://localhost:3000",
+                    Referer: "http://localhost:3000/",
+                    "Sec-Ch-Ua": '"Chromium";v="140", "Not=A?Brand";v="24", "Google Chrome";v="140"',
+                    Connection: "keep-alive",
+                    "User-Agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/140.0.0.0 Safari/537.36",
+                    "Content-Type": "application/json",
+                    Authorization: "Bearer Token",
+                    "Content-Length": "741",
+                    "Sec-Fetch-Dest": "empty",
+                    "Sec-Fetch-Mode": "cors",
+                    "Sec-Fetch-Site": "same-site",
+                    "Accept-Encoding": "gzip, deflate, br, zstd",
+                    "Accept-Language": "en-US,en;q=0.9",
+                    "Sec-Ch-Ua-Mobile": "?0",
+                    "Sec-Ch-Ua-Platform": '"macOS"',
+                },
+                "request.remote_addr": "192.168.127.1",
+                "request.remote_user": null,
+            },
+            created_by: 516,
+            created_on: "2025-01-29T14:43:53.928887Z",
+        },
+        {
+            // 64 delete BLI
+            event_type: "UPDATE_BLI",
+            event_status: "SUCCESS",
+            event_details: {
+                deleted_bli: {
+                    id: 16044,
+                    can: 503,
+                    mod: null,
+                    clin: null,
+                    amount: "23435.00",
+                    can_id: 503,
+                    closed: false,
+                    is_obe: false,
+                    mod_id: null,
+                    status: "DRAFT",
+                    clin_id: null,
+                    invoice: null,
+                    on_hold: false,
+                    comments: null,
+                    end_date: null,
+                    versions: [],
+                    agreement: 9,
+                    certified: false,
+                    closed_by: null,
+                    created_by: 520,
+                    created_on: "2025-09-23T14:44:50.220295Z",
+                    start_date: null,
+                    updated_by: 520,
+                    updated_on: "2025-09-23T14:45:47.723802Z",
+                    closed_date: null,
+                    date_needed: "2025-09-26",
+                    requisition: null,
+                    agreement_id: 9,
+                    display_name: "BL 16044",
+                    doc_received: false,
+                    extend_pop_to: null,
+                    closed_by_user: null,
+                    created_by_user: null,
+                    obligation_date: null,
+                    updated_by_user: null,
+                    line_description: "jhkg",
+                    object_class_code: null,
+                    psc_fee_doc_number: null,
+                    services_component: 9,
+                    object_class_code_id: null,
+                    procurement_shop_fee: null,
+                    psc_fee_pymt_ref_nbr: null,
+                    budget_line_item_type: "CONTRACT",
+                    services_component_id: 9,
+                    procurement_shop_fee_id: null,
+                    proc_shop_fee_percentage: null,
+                    is_under_current_resolution: false,
+                    service_component_name_for_sort: "SC2",
+                },
+                "request.values": {},
+                "request.headers": {
+                    Host: "localhost:8080",
+                    Accept: "*/*",
+                    Origin: "http://localhost:3000",
+                    Referer: "http://localhost:3000/",
+                    "Sec-Ch-Ua": '"Chromium";v="140", "Not=A?Brand";v="24", "Google Chrome";v="140"',
+                    Connection: "keep-alive",
+                    "User-Agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/140.0.0.0 Safari/537.36",
+                    Authorization: "Bearer Token",
+                    "Sec-Fetch-Dest": "empty",
+                    "Sec-Fetch-Mode": "cors",
+                    "Sec-Fetch-Site": "same-site",
+                    "Accept-Encoding": "gzip, deflate, br, zstd",
+                    "Accept-Language": "en-US,en;q=0.9",
+                    "Sec-Ch-Ua-Mobile": "?0",
+                    "Sec-Ch-Ua-Platform": '"macOS"',
+                },
+                "request.remote_addr": "192.168.127.1",
+                "request.remote_user": null,
+            },
+            created_by: 516,
+            created_on: "2025-01-29T14:43:53.928887Z",
+        },
     ],
 }
