test: finish writing tests for new bli draft dev msgs

--- a/backend/data_tools/data/ops_event.json5
+++ b/backend/data_tools/data/ops_event.json5
@@ -6107,7 +6107,7 @@
         },
         {
             // 64 delete BLI
-            event_type: "UPDATE_BLI",
+            event_type: "DELETE_BLI",
             event_status: "SUCCESS",
             event_details: {
                 deleted_bli: {
