--- a/backend/data_tools/data/ops_event.json5
+++ b/backend/data_tools/data/ops_event.json5
@@ -6184,5 +6184,178 @@
             created_by: 516,
             created_on: "2025-01-29T14:43:53.928887Z",
         },
+        {
+            // 65 change COR and agreement reason
+            event_type: "UPDATE_AGREEMENT",
+            event_status: "SUCCESS",
+            event_details: {
+                "request.json": {
+                    name: "Interoperability Initiatives",
+                    _meta: {
+                        isEditable: true,
+                    },
+                    notes: "",
+                    vendor: null,
+                    cotr_id: null,
+                    end_date: null,
+                    nick_name: null,
+                    po_number: null,
+                    vendor_id: 102,
+                    project_id: 1002,
+                    start_date: null,
+                    description: "Test description",
+                    maps_sys_id: null,
+                    display_name: "Interoperability Initiatives",
+                    team_leaders: ["Ivelisse Martinez-Beck", "Sheila Celentano"],
+                    team_members: [
+                        {
+                            id: 511,
+                            email: "Niki.Denmark@example.com",
+                            full_name: "Niki Denmark",
+                        },
+                        {
+                            id: 520,
+                            email: "system.owner@email.com",
+                            full_name: "System Owner",
+                        },
+                    ],
+                    contract_type: "FIRM_FIXED_PRICE",
+                    agreement_type: "CONTRACT",
+                    contract_number: "XXXX000000009",
+                    acquisition_type: null,
+                    agreement_reason: "RECOMPETE",
+                    delivered_status: false,
+                    procurement_shop: {
+                        id: 2,
+                        abbr: "GCS",
+                        name: "Government Contracting Services",
+                        created_by: null,
+                        created_on: "2025-09-24T23:48:59.745876",
+                        updated_by: null,
+                        updated_on: "2025-09-24T23:48:59.745876",
+                        current_fee: {
+                            id: 2,
+                            fee: 0,
+                            end_date: null,
+                            created_by: null,
+                            created_on: "2025-09-24T23:48:59.775723",
+                            start_date: null,
+                            updated_by: null,
+                            updated_on: "2025-09-24T23:48:59.775723",
+                            procurement_shop: {
+                                id: 2,
+                                abbr: "GCS",
+                                name: "Government Contracting Services",
+                                fee_percentage: 0,
+                            },
+                            procurement_shop_id: 2,
+                        },
+                        fee_percentage: 0,
+                        procurement_shop_fees: [
+                            {
+                                id: 2,
+                                fee: 0,
+                                end_date: null,
+                                created_by: null,
+                                created_on: "2025-09-24T23:48:59.775723",
+                                start_date: null,
+                                updated_by: null,
+                                updated_on: "2025-09-24T23:48:59.775723",
+                                procurement_shop: {
+                                    id: 2,
+                                    abbr: "GCS",
+                                    name: "Government Contracting Services",
+                                    fee_percentage: 0,
+                                },
+                                procurement_shop_id: 2,
+                            },
+                        ],
+                    },
+                    support_contacts: [],
+                    contract_category: "RESEARCH",
+                    task_order_number: null,
+                    awarding_entity_id: 2,
+                    division_directors: ["Dave Director", "Director Derrek"],
+                    project_officer_id: null,
+                    product_service_code_id: 1,
+                    psc_contract_specialist: "",
+                    service_requirement_type: "NON_SEVERABLE",
+                    alternate_project_officer_id: 501,
+                },
+                "request.values": {},
+                "request.headers": {
+                    Host: "localhost:8080",
+                    Accept: "*/*",
+                    Origin: "http://localhost:3000",
+                    Referer: "http://localhost:3000/",
+                    "Sec-Ch-Ua": '"Chromium";v="140", "Not=A?Brand";v="24", "Google Chrome";v="140"',
+                    Connection: "keep-alive",
+                    "User-Agent": "Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/140.0.0.0 Safari/537.36",
+                    "Content-Type": "application/json",
+                    Authorization: "Bearer Token",
+                    "Content-Length": "1878",
+                    "Sec-Fetch-Dest": "empty",
+                    "Sec-Fetch-Mode": "cors",
+                    "Sec-Fetch-Site": "same-site",
+                    "Accept-Encoding": "gzip, deflate, br, zstd",
+                    "Accept-Language": "en-US,en;q=0.9",
+                    "Sec-Ch-Ua-Mobile": "?0",
+                    "Sec-Ch-Ua-Platform": '"macOS"',
+                },
+                agreement_updates: {
+                    changes: {
+                        vendor: {
+                            new_value: null,
+                            old_value: 102,
+                        },
+                        vendor_id: {
+                            new_value: null,
+                            old_value: 102,
+                        },
+                        updated_by: {
+                            new_value: 520,
+                            old_value: null,
+                        },
+                        updated_on: {
+                            new_value: "2025-09-24T23:50:12.473570Z",
+                            old_value: "2025-09-24T23:49:04.282862Z",
+                        },
+                        project_officer: {
+                            new_value: null,
+                            old_value: 503,
+                        },
+                        updated_by_user: {
+                            new_value: {
+                                id: 520,
+                                full_name: "System Owner",
+                            },
+                            old_value: null,
+                        },
+                        agreement_reason: {
+                            new_value: "RECOMPETE",
+                            old_value: "NEW_REQ",
+                        },
+                        project_officer_id: {
+                            new_value: null,
+                            old_value: 503,
+                        },
+                        alternate_project_officer: {
+                            new_value: 501,
+                            old_value: null,
+                        },
+                        alternate_project_officer_id: {
+                            new_value: 501,
+                            old_value: null,
+                        },
+                    },
+                    owner_id: 9,
+                    updated_by: 520,
+                },
+                "request.remote_addr": "192.168.127.1",
+                "request.remote_user": null,
+            },
+            created_by: 516,
+            created_on: "2025-01-29T14:43:53.928887Z",
+        },
     ],
 }
