chore: update bun.lock from bun.lockb
updates precommit hooks to allow files up to 1000kb

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,6 +11,7 @@ repos:
       - id: check-json
       - id: check-yaml
       - id: check-added-large-files
+        args: [--maxkb=1000]
       - id: check-merge-conflict
   - repo: https://github.com/hadolint/hadolint
     rev: v2.14.0
