fix: suppress Cypress DBUS and terminal noise in CI
Add TERM=xterm and NO_COLOR=1 environment variables to the E2E test step
to reduce log noise from DBUS connection errors and terminal formatting issues
in the headless CI environment.

--- a/.github/workflows/e2e_test_reusable.yml
+++ b/.github/workflows/e2e_test_reusable.yml
@@ -64,6 +64,9 @@ jobs:
       # Run the Cypress E2E Tests
       - name: E2E Test
         working-directory: frontend
+        env:
+          TERM: xterm
+          NO_COLOR: 1
         run: |
           bun run cypress install && bun run test:e2e:ci --spec $(echo "${{ matrix.file }}" | sed 's/frontend\///')
 
