fix: add DBUS and DISPLAY env vars to further suppress Cypress noise
Add DBUS_SESSION_BUS_ADDRESS=/dev/null and DISPLAY=:99 to prevent
DBUS connection errors that appear when Cypress starts up in CI.

--- a/.github/workflows/e2e_test_reusable.yml
+++ b/.github/workflows/e2e_test_reusable.yml
@@ -67,6 +67,8 @@ jobs:
         env:
           TERM: xterm
           NO_COLOR: 1
+          DBUS_SESSION_BUS_ADDRESS: /dev/null
+          DISPLAY: :99
         run: |
           bun run cypress install && bun run test:e2e:ci --spec $(echo "${{ matrix.file }}" | sed 's/frontend\///')
 
