--- a/.github/workflows/e2e_test_reusable.yml
+++ b/.github/workflows/e2e_test_reusable.yml
@@ -75,9 +75,9 @@ jobs:
         env:
           TERM: xterm
           NO_COLOR: 1
-          DBUS_SESSION_BUS_ADDRESS: /dev/null
           DISPLAY: :99
         run: |
+          unset DBUS_SESSION_BUS_ADDRESS
           bun run cypress install && bun run test:e2e:ci --spec $(echo "${{ matrix.file }}" | sed 's/frontend\///')
 
       # Upload Cypress screenshots as artifact if a test fails
