--- a/.github/workflows/e2e_test_reusable.yml
+++ b/.github/workflows/e2e_test_reusable.yml
@@ -61,11 +61,12 @@ jobs:
           TEST_FILE=$(basename "${{ matrix.file }}" | sed 's/\.cy\.js//')
           echo "TEST_FILE=$TEST_FILE" >> $GITHUB_OUTPUT
 
-      # Setup virtual display for Cypress
-      - name: Setup X11 Virtual Display
+      # Setup virtual display and dependencies for Cypress
+      - name: Setup X11 Virtual Display and Dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y xvfb
+          sudo apt-get install -y xvfb dbus-x11 libgtk-3-0 libgconf-2-4 libnss3-dev libxss1 libasound2-dev
+          sudo service dbus start
           export DISPLAY=:99
           Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
 
@@ -77,7 +78,6 @@ jobs:
           NO_COLOR: 1
           DISPLAY: :99
         run: |
-          unset DBUS_SESSION_BUS_ADDRESS
           bun run cypress install && bun run test:e2e:ci --spec $(echo "${{ matrix.file }}" | sed 's/frontend\///')
 
       # Upload Cypress screenshots as artifact if a test fails
