--- a/.github/workflows/e2e_test_reusable.yml
+++ b/.github/workflows/e2e_test_reusable.yml
@@ -65,7 +65,7 @@ jobs:
       - name: Setup X11 Virtual Display and Dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y xvfb dbus-x11 libgtk-3-0 libgconf-2-4 libnss3-dev libxss1 libasound2-dev
+          sudo apt-get install -y xvfb dbus-x11 libgtk-3-0 libnss3-dev libxss1 libasound2-dev libgbm1
           sudo service dbus start
           export DISPLAY=:99
           Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
