feat: sort agreement agencies by agency name and paginate agencies

--- a/backend/data_tools/data/first_contract_data.json5
+++ b/backend/data_tools/data/first_contract_data.json5
@@ -88,6 +88,13 @@
             requesting: false,
             servicing: true,
         },
+        {
+            id: 5,
+            name: "Zebra Federal Agency",
+            abbreviation: "ZFA",
+            requesting: true,
+            servicing: false,
+        },
     ],
     contract_agreement: [
         {
