feat: adds browserlist to docker

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,7 +7,9 @@ FROM base AS prod-deps
 RUN mkdir -p /home/app
 COPY package.json bun.lock /home/app/
 WORKDIR /home/app
-RUN bun install --frozen-lockfile --production
+# Install production dependencies and update browserslist database
+RUN bun install --frozen-lockfile --production && \
+    bunx update-browserslist-db@latest
 
 # Production image – copy only production dependencies and source code (assumes your code is prebuilt)
 FROM base AS release
