--- a/frontend/Dockerfile.azure
+++ b/frontend/Dockerfile.azure
@@ -10,10 +10,11 @@ WORKDIR /home/bun/app
 # This layer will only rebuild when package.json or bun.lock changes
 COPY package.json bun.lock ./
 
-# Install all dependencies (including dev dependencies needed for build)
+# Install dependencies and update browserslist database
 # Use cache mount to persist Bun cache, but install to local node_modules for reliability
 RUN --mount=type=cache,target=/root/.bun/install/cache \
-    bun install --frozen-lockfile
+    bun install --frozen-lockfile && \
+    bunx update-browserslist-db@latest
 
 # ---- Build Stage ----
 FROM deps as build
